# Toolkit

./: .gitignore
.github/workflows/: tests.yml
cli-taskmanager/: README.md  pyproject.toml
cli-taskmanager/src/cli_taskmanager/: app.py
cli-taskmanager/src/cli_taskmanager/cli/: commands.py
cli-taskmanager/src/cli_taskmanager/controller/: task_service.py
cli-taskmanager/src/cli_taskmanager/model/: task.py
cli-taskmanager/src/cli_taskmanager/storage/: schema.sql  sqlite_storage.py
cli-taskmanager/tests/: test_cli.py  test_storage.py  test_task_service.py
